Configured cache-simulator

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 **/.vscode
 #ignore object files
 **/*.o
+./cache-simulator/project3.pdf
+./cache-simulator/project3_code.tar.gz
+./cache-simulator/asm
+./cache-simulator/bin
